added in prep pubs.

--- a/CV_CR.tex
+++ b/CV_CR.tex
@@ -25,6 +25,7 @@
 
 \usepackage[dvipsnames]{xcolor}
 \colorlet{sep}{MidnightBlue}
+\colorlet{rb}{RoyalBlue}
 \usepackage{tikz}
 \usepackage{fontawesome}
 
@@ -232,14 +233,19 @@
 			
 		\end{enumerate}
 	
-		\textbf{\emph{\textcolor{sep}{In progress}}}
+		\textbf{\emph{\textcolor{sep}{\textbf{In progress}}}}
 			\begin{enumerate}[topsep=1pt, partopsep=1pt, itemsep=0.5pt, parsep=0.1pt, leftmargin=15pt,label=\arabic*.]
 				
-			\item C Roychoudhury, W Cheng, N Mizukami, C He, AF Arellano and R Kumar. \textbf{MATCHA, Model for Atmospheric Transport and Chemistry in Asia, a novel regional climate-chemical reanalysis. Part 1: System description and initial evaluation}. (\textit{In preparation for Earth System Science Data}).
-	
 			\item \textit{C Roychoudhury}, C He, R Kumar, AF Arellano Jr. \textbf{Diagnosing Aerosol-Meteorological Interactions on Snow within the Earth System: A Proof-of-Concept Study over High Mountain Asia}.  \emph{\href{https://doi.org/10.5194/egusphere-2024-2298}{Earth System Dynamics}}. \textit{In review}.
+				
+			\item C Roychoudhury, W Cheng, N Mizukami, C He, AF Arellano and R Kumar. \textbf{MATCHA, Model for Atmospheric Transport and Chemistry in Asia, a novel regional climate-chemical reanalysis. Part 1: System description and initial evaluation}. (\textit{In preparation for Earth System Science Data}).
 			
-			\item H Bai, \textit{C Roychoudhury}, C Strong. \textbf{Seasonal shift and variability of summertime North American Dipole on large ensemble climate simulations.} (\emph{In preparation}).
+			\item \textit{C Roychoudhury}, AF Arellano, W Cheng, N Mizukami, J McKinnon, C He, and R Kumar. \textbf{Is traditional Bayesian inversion sufficient to constrain black carbon abundance in High Mountain Asia? Exploring machine learning to quanitfy model biases}.  (\textit{In preparation for Atmospheric Measurement Techniques}).
+			
+			\item J McKinnon, \textit{C Roychoudhury}, and AF Arellano Jr. \textbf{Spatio-temporal pattern analysis of MOPITT total column CO
+			using varimax rotation and singular spectrum analysis}. (\textit{In preparation for Atmospheric Measurement Techniques}).
+			
+			\item H Bai, \textit{C Roychoudhury}, C Strong. \textbf{Variability of summertime North American Dipole from large ensemble climate simulations.} (\emph{In preparation}).
 			
 			\item   SK Das, \textit{C Roychoudhury}, SK Ghosh, S Raha, and U Das.
 			\textbf{ Deterioration of background air quality by transported winter haze: Alarming high health risk for urban people over Indo-Gangetic Plain}. (\emph{In preparation}).
