--- a/CV_CR.tex
+++ b/CV_CR.tex
@@ -211,6 +211,8 @@
 		\textbf{\emph{\textcolor{sep}{Publications}}}
 		\begin{enumerate}[topsep=1pt, partopsep=1pt, itemsep=0.5pt, parsep=0.1pt, leftmargin=15pt,label=\arabic*.]
 			
+			\item \textit{C Roychoudhury}, C He, R Kumar, AF Arellano Jr. 2025.  \textbf{Diagnosing Aerosol-Meteorological Interactions on Snow within the Earth System: A Proof-of-Concept Study over High Mountain Asia}.  \emph{\href{16, 1237–1266, https://doi.org/10.5194/esd-16-1237-2025, 2025.}{Earth System Dynamics}}.
+			
 			\item \textit{C Roychoudhury}, C He, R Kumar, JM McKinnon, and AF Arellano. \textbf{On the relevance of aerosols to snow cover variability over High Mountain Asia.} 2022.  \href{https://doi.org/10.1029/2022GL099317}{\textit{Geophysical Research Letters, 49}}.
 			
 			\item R Kumar, C He, \textit{C Roychoudhury}, W Cheng, N Mizukami, and AF Arellano. 
@@ -236,19 +238,24 @@
 		\textbf{\emph{\textcolor{sep}{\textbf{In progress}}}}
 			\begin{enumerate}[topsep=1pt, partopsep=1pt, itemsep=0.5pt, parsep=0.1pt, leftmargin=15pt,label=\arabic*.]
 				
+			\item JM Mckinnon, \textit{C Roychoudhury}, MA Mirrezaei, B Gaubert, AF Arellano.  \textbf{Use of Power Spectral Analysis and Dominant Time Scales to
+			Investigate Seasonal and Long-Term Variability of Atmospheric
+			Composition.} \text{In prep.}
+				
+			\item JM McKinnon, \textit{C Roychoudhury}, AF Arellano. \textbf{Spatio-temporal pattern analysis of MOPITT total column CO using varimax rotation and singular spectrum analysis.} \href{https://egusphere.copernicus.org/preprints/2025/egusphere-2024-3440}{Atmospheric Measurement Techniques}. \textit{In review.}
+			
+			\item J Richter, E Joseph, M Arcodia, J Berner, J Demuth, P Falloon, G Romine, J Cohen, J Gonzalez-Cruz, M El Gharamti, B Hoppe, S Kumar, A Mariotti, D Mishra, K Pegion, Z Pu, K A Quagraine, K T Quagraine, \textit{C Roychoudhury}, J Ryan, Z Stone, D Das, B Gaubert, S Kapnick, C Zarzycki.
+			 \textbf{Earth System Predictability Across Time Scales for a Resilient Society: A Research Community Perspective} \textit{(Submitted to the Bulletin of the American Meteorological Society.)}
+			
 			\item \textit{C Roychoudhury}, C He, R Kumar, AF Arellano Jr. \textbf{Diagnosing Aerosol-Meteorological Interactions on Snow within the Earth System: A Proof-of-Concept Study over High Mountain Asia}.  \emph{\href{https://doi.org/10.5194/egusphere-2024-2298}{Earth System Dynamics}}. \textit{In review}.
 				
 			\item C Roychoudhury, W Cheng, N Mizukami, C He, AF Arellano and R Kumar. \textbf{MATCHA, Model for Atmospheric Transport and Chemistry in Asia, a novel regional climate-chemical reanalysis. Part 1: System description and initial evaluation}. (\textit{In preparation for Earth System Science Data}).
 			
-			\item \textit{C Roychoudhury}, AF Arellano, W Cheng, N Mizukami, J McKinnon, C He, and R Kumar. \textbf{Is traditional Bayesian inversion sufficient to constrain black carbon abundance in High Mountain Asia? Exploring machine learning to quanitfy model biases}.  (\textit{In preparation for Atmospheric Measurement Techniques}).
+			\item C Roychoudhury, C He, R Kumar, and AF Arellano. \textbf{Revisiting Black Carbon Emission Estimates in the Third Pole: A
+				Bayesian Synthesis Inversion Perspective.} (\textit{In preparation for Atmospheric Measurement Techniques}).
 			
-			\item J McKinnon, \textit{C Roychoudhury}, and AF Arellano Jr. \textbf{Spatio-temporal pattern analysis of MOPITT total column CO
-			using varimax rotation and singular spectrum analysis}. (\textit{In preparation for Atmospheric Measurement Techniques}).
 			
 			\item H Bai, \textit{C Roychoudhury}, C Strong. \textbf{Variability of summertime North American Dipole from large ensemble climate simulations.} (\emph{In preparation}).
-			
-			\item   SK Das, \textit{C Roychoudhury}, SK Ghosh, S Raha, and U Das.
-			\textbf{ Deterioration of background air quality by transported winter haze: Alarming high health risk for urban people over Indo-Gangetic Plain}. (\emph{In preparation}).
 			
 			%Aerosol and Air Quality Research, 2019 (\emph{Under Review})
 			\item SK Das, \textit{C Roychoudhury}, and A Taori.
@@ -261,6 +268,10 @@
 	
 	\textbf{\emph{\textcolor{sep}{Conference Presentations}}}
 		\begin{enumerate}[topsep=1pt, partopsep=1pt, itemsep=0.5pt, parsep=0.1pt, leftmargin=15pt,label=\arabic*.]
+			
+			\item \textit{C Roychoudhury}, AF Arellano. \textbf{Diagnosing Interactions at the Earth System Interface: Case Studies from Snowmelt and Chemical Feedbacks.} Poster NG43A-2301 presented at AGU Fall Meeting 2024, Washington DC. 
+			
+			\item \textit{C Roychoudhury}, JM McKinnon, MA Mirrezaei, Y Guo, AF Arellano. \textbf{Source attribution of wildfires in Arizona: An exploration of the June 2021 wildfire season}. Poster GC23F-0335 presented at AGU Fall Meeting 2024, Washington DC. 
 			
 			\item \textit{C Roychoudhury}, MA Mirrezaei, Y Guo, AR Arellano, G Betito, A Sorooshian, AF Arellano.  \textbf{Leveraging atmospheric chemistry observations in Arizona: Insights into the regional transport of ozone and aerosols.} Poster presented at AERONET Science and Application Exchange, College Park, MD, September 17-19, 2024.
 			
@@ -386,7 +397,7 @@
 		\section{\mysidestyle \textbf{\textcolor{sep}{Technical \\Skills}}}
 		
 		%\emph{Programming Languages and Software Packages}\\
-		\textbf{\emph{\textcolor{sep}{Programming}}} \hspace{1mm} Python, GrADS, IDL, MATLAB, QGIS/ArcGIS,  \LaTeX, Linux, HPC.\\
+		\textbf{\emph{\textcolor{sep}{Programming}}} \hspace{1mm} Python, GrADS, IDL, MATLAB, QGIS/ArcGIS, PostgreSQL,  \LaTeX, Linux, HPC.\\
 		\textbf{\emph{\textcolor{sep}{Modeling}}} \hspace{8mm} WRF-Chem, CESM/CESM-SCAM  
 		
 		%\vspace{-2mm}
@@ -402,6 +413,7 @@
 			\item Recipient of John \& Margaret Harshbarger Scholarship, University of Arizona (2024).
 			\item Recipient of Sol Resnick Scholarship, University of Arizona (2023).
 			\item Recipient of Galileo Circle Scholarship, University of Arizona (2022).
+			\item NSF NCAR Graduate Visitor Program (GVP) (2022).
 			\item Rank 1 in MSc in Atmospheric Science (2019) and eligible for INSPIRE-Fellowship under DST, Government of India.
 			%\item First Position for the poster on \emph{Impact of %Climate Change on Butterfly Population over a Metropolis of %India} presented at BIOSPECTRUM - 2018 in Environmental %Biotechnology and Bioremediation (2018).\\
 			
