--- a/CV_CR.tex
+++ b/CV_CR.tex
@@ -100,7 +100,7 @@
 			 \hspace*{1mm} \href{https://sites.arizona.edu/afarellano/}{\textbf{M}odeling and \textbf{A}nalysis of \textbf{A}tmospheric \textbf{C}omposition Laboratory} \hfill     
 			\hspace{1mm}
 			\href{mailto:croychoudhury@arizona.edu}{\faEnvelopeO} \hspace*{1mm} 
-			\href{https://chayanroyc.faculty.bio}{\faInfo} \hspace*{1mm}
+			\href{https://www.chayan-roychoudhury.com/}{\faInfo} \hspace*{1mm}
 			 \href{https://www.linkedin.com/in/chayan-roychoudhury-5a274b80/}{\faLinkedin}
 			\hspace*{1mm}
 			\href{https://scholar.google.com/citations?user=7vi4IIkAAAAJ&hl=en&authuser=2}{\faGoogle} \hspace{1mm}\href{https://github.com/chayanroyc}{\faGithub} \hspace*{1mm} \orcidchayan
@@ -127,11 +127,11 @@
 		% Education
 		\section{\mysidestyle \textbf{\textcolor{sep}{Education}}}
 		
-		\emph{Doctoral Studies - PhD} \hfill January 2021 - \textit{Present}\\
+		\emph{Doctoral Studies - PhD} \hfill Jan 2021 - Aug 2025\\
 		\textbf{The University of Arizona, Department of Hydrology and Atmospheric Sciences} \\
 		\textit{Supervisor} : Dr. Avelino F. Arellano Jr.
 		
-		\emph{Post-Graduation - MSc} \hfill  August 2017 - July 2019\\
+		\emph{Post-Graduation - MSc} \hfill  Aug 2017 - Jul 2019\\
 		\textbf{University of Calcutta, Department of Atmospheric Science} \\
 		\footnotesize
 		\normalsize
@@ -139,7 +139,7 @@
 		\textit{Supervisor} : Dr. Sanat Kumar Das, Bose Institute
 		
 		\emph{Graduation - BSc}\\
-		\textbf{University of Calcutta, Department of Physics}	\hfill August 2014 - June - 2017\\
+		\textbf{University of Calcutta, Department of Physics}	\hfill Aug 2014 - Jun 2017\\
 %\textbf{Department of Physics}  \hfill Percentage : 60.625\% \\
 		First Class Honours 
 %		with Minors in Mathematics and Chemistry
@@ -150,15 +150,15 @@
 		% Work Experience
 		\section{\mysidestyle \textbf{\textcolor{sep}{Work \\Experience}}}
 		
-		\textbf{Graduate Research Assistant} \hfill January 2021 - Present  \\
-		\textbf{Graduate Teaching Assistant} \hfill January 2023 - May 2024  \\
+		\textbf{Graduate Research Assistant} \hfill Jan 2021 - \textit{Present}  \\
+		\textbf{Graduate Teaching Assistant} \hfill Jan 2023 - May 2024  \\
 		\hspace*{2mm} \textit{ATMO 430 - Computational Methods in Atmospheric Sciences} (Spring 2023) \\
 		\hspace*{2mm}  \textit{ATMO 569 - Air Pollution I : Gases} (Fall Spring 2023) \\
 		\hspace*{2mm}  \textit{ATMO 545 - Introduction to Data Assimilation} (Spring 2024) \\
 		Department of Hydrology and Atmospheric Sciences, The University of Arizona \\
 		\textit{ Supervisor} : Dr. Avelino F. Arellano Jr.
 		
-		\textbf{Guest Research Worker} \hfill August 2019 - July 2020 \\
+		\textbf{Guest Research Worker} \hfill Aug 2019 - Jul 2020 \\
 		Bose Institute, Environmental Sciences Section \\
 		\textit{Supervisor} : Dr. Sanat Kumar Das 
 		%\textbf{Dept. of Computer Science \& Engg, IIT Kharagpur} \hfill Teaching Assistant\\
@@ -425,6 +425,9 @@
 		\begin{enumerate}[topsep=0.1pt, partopsep=1pt, itemsep=0.1pt, parsep=0.1pt, leftmargin=12pt,label=\roman{*})]
 			\item Geophysical Research Letters (Wiley).
 			\item Theoretical and Applied Climatology (Springer).
+			\item Environmental Monitoring and Assessment (Springer).
+			\item 
+			Journal of Applied Meteorology and Climatology (AMS).
 			%\item First Position for the poster on \emph{Impact of %Climate Change on Butterfly Population over a Metropolis of %India} presented at BIOSPECTRUM - 2018 in Environmental %Biotechnology and Bioremediation (2018).\\
 			
 		\end{enumerate} 
